--- a/RunCoin/StroyBoards/Base.lproj/LaunchScreen.storyboard
+++ b/RunCoin/StroyBoards/Base.lproj/LaunchScreen.storyboard
@@ -30,16 +30,22 @@
                                 <rect key="frame" x="15" y="0.0" width="345" height="667"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="runCoinLogo" translatesAutoresizingMaskIntoConstraints="NO" id="E9T-qs-E9T">
-                                <rect key="frame" x="0.0" y="132" width="300" height="222"/>
+                                <rect key="frame" x="0.0" y="152" width="298" height="222"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Motivation to thrive." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="izy-Fm-Qd1">
-                                <rect key="frame" x="121" y="548" width="132" height="19.5"/>
+                                <rect key="frame" x="124" y="548" width="127" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="DBN-BJ-YU1"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RUNCOIN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Szh-A6-jdp">
-                                <rect key="frame" x="74.5" y="460" width="226" height="69"/>
+                                <rect key="frame" x="75" y="460" width="225.5" height="69"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="69" id="Ng8-xw-1me"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Nunito-ExtraLightItalic" family="Nunito" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -47,18 +53,20 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="izy-Fm-Qd1" secondAttribute="bottom" constant="99" id="03c-xf-glg"/>
                             <constraint firstItem="kd8-yk-neb" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="0jj-gE-Nz7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E9T-qs-E9T" secondAttribute="trailing" constant="75" id="Jka-fA-gGt"/>
-                            <constraint firstItem="E9T-qs-E9T" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="112" id="OiW-x8-unx"/>
+                            <constraint firstItem="Szh-A6-jdp" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="1ga-pw-4Bu"/>
+                            <constraint firstItem="E9T-qs-E9T" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="132" id="T9g-re-RQF"/>
                             <constraint firstItem="kd8-yk-neb" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Tz5-i9-7KV"/>
-                            <constraint firstItem="Szh-A6-jdp" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="gAZ-Te-6He"/>
-                            <constraint firstItem="Szh-A6-jdp" firstAttribute="top" secondItem="E9T-qs-E9T" secondAttribute="bottom" constant="106" id="gI8-up-6Hy"/>
+                            <constraint firstItem="izy-Fm-Qd1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="YFM-7L-4KI"/>
+                            <constraint firstItem="izy-Fm-Qd1" firstAttribute="top" secondItem="Szh-A6-jdp" secondAttribute="bottom" constant="19" id="cF1-Ff-hrV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E9T-qs-E9T" secondAttribute="trailing" constant="77" id="ewI-LZ-XEP"/>
                             <constraint firstItem="kd8-yk-neb" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gaj-Ll-w3I"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kd8-yk-neb" secondAttribute="trailing" constant="15" id="lYU-PB-epy"/>
                             <constraint firstItem="kd8-yk-neb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="mwt-fy-wCu"/>
-                            <constraint firstItem="izy-Fm-Qd1" firstAttribute="top" secondItem="Szh-A6-jdp" secondAttribute="bottom" constant="19" id="sm5-25-E8Y"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="izy-Fm-Qd1" secondAttribute="trailing" constant="122" id="tAB-qN-fMS"/>
-                            <constraint firstItem="izy-Fm-Qd1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="121" id="tHg-LE-Bpb"/>
+                            <constraint firstAttribute="bottom" secondItem="Szh-A6-jdp" secondAttribute="bottom" constant="138" id="o2k-aV-EU4"/>
+                            <constraint firstItem="Szh-A6-jdp" firstAttribute="top" secondItem="E9T-qs-E9T" secondAttribute="bottom" constant="86" id="o78-CY-gl2"/>
+                            <constraint firstItem="E9T-qs-E9T" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="phm-bx-1md"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
