--- a/RunCoin/StroyBoards/Base.lproj/Main.storyboard
+++ b/RunCoin/StroyBoards/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                                 <rect key="frame" x="13" y="64" width="349" height="647"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdH-lQ-2xR">
-                                <rect key="frame" x="45" y="570" width="285" height="47"/>
+                                <rect key="frame" x="45" y="573" width="285" height="47"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="47" id="h9C-yB-3eZ"/>
@@ -74,7 +74,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slickCharacter" translatesAutoresizingMaskIntoConstraints="NO" id="ojy-I1-NKC">
                                 <rect key="frame" x="119" y="145" width="136" height="221"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0O-Uz-dng" customClass="FBSDKLoginButton">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0O-Uz-dng">
                                 <rect key="frame" x="45" y="431" width="285" height="47"/>
                                 <color key="backgroundColor" red="0.1450980392" green="0.32549019610000002" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -85,36 +85,41 @@
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="facebookLoginPressed:" destination="XJY-18-pOe" eventType="touchUpInside" id="CVn-Iw-IWM"/>
+                                    <action selector="facebookLoginPressed:" destination="XJY-18-pOe" eventType="touchUpInside" id="K8e-m1-SPF"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BOT-Ho-2kd" customClass="GIDSignInButton">
-                                <rect key="frame" x="45" y="500" width="285" height="47"/>
-                                <color key="backgroundColor" red="0.23529411759999999" green="0.62352941179999999" blue="0.59215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lp5-ry-PLL">
+                                <rect key="frame" x="45" y="502" width="285" height="50"/>
+                                <color key="backgroundColor" red="0.1450980392" green="0.32549019610000002" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="47" id="YUx-Cl-AnT"/>
+                                    <constraint firstAttribute="height" constant="50" id="1Td-Eq-MjZ"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" name="Nunito-Black" family="Nunito" pointSize="14"/>
+                                <state key="normal" title="Login With Google">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
-                                    <action selector="googleLoginPressed:" destination="XJY-18-pOe" eventType="touchUpInside" id="gHg-gp-ptv"/>
+                                    <action selector="googleLoginPressed:" destination="XJY-18-pOe" eventType="touchUpInside" id="Rds-2d-JYc"/>
                                 </connections>
-                            </view>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="Lp5-ry-PLL" firstAttribute="leading" secondItem="isU-f5-5wO" secondAttribute="leading" constant="45" id="0fa-3Y-uem"/>
                             <constraint firstAttribute="bottomMargin" secondItem="r0O-Uz-dng" secondAttribute="bottom" constant="189" id="3Ah-Ri-rWj"/>
-                            <constraint firstItem="mdH-lQ-2xR" firstAttribute="top" secondItem="BOT-Ho-2kd" secondAttribute="bottom" constant="23" id="ENz-kL-H1c"/>
+                            <constraint firstItem="isU-f5-5wO" firstAttribute="trailing" secondItem="mdH-lQ-2xR" secondAttribute="trailing" constant="45" id="Drx-M2-I3p"/>
                             <constraint firstItem="r0O-Uz-dng" firstAttribute="leading" secondItem="isU-f5-5wO" secondAttribute="leading" constant="45" id="Emf-iW-drK"/>
                             <constraint firstItem="Wx1-3H-cD4" firstAttribute="top" secondItem="isU-f5-5wO" secondAttribute="top" id="Hzi-rY-aAN"/>
                             <constraint firstItem="r0O-Uz-dng" firstAttribute="top" secondItem="ojy-I1-NKC" secondAttribute="bottom" constant="65" id="Kge-wC-o0M"/>
+                            <constraint firstItem="mdH-lQ-2xR" firstAttribute="top" secondItem="Lp5-ry-PLL" secondAttribute="bottom" constant="21" id="Mu7-W5-3Uw"/>
                             <constraint firstItem="Wx1-3H-cD4" firstAttribute="centerX" secondItem="RnQ-Q1-TEV" secondAttribute="centerX" id="WTQ-nY-ZKk"/>
                             <constraint firstItem="mdH-lQ-2xR" firstAttribute="leading" secondItem="isU-f5-5wO" secondAttribute="leading" constant="45" id="YYe-sH-VoD"/>
-                            <constraint firstItem="BOT-Ho-2kd" firstAttribute="leading" secondItem="isU-f5-5wO" secondAttribute="leading" constant="45" id="g85-pi-1AD"/>
-                            <constraint firstItem="isU-f5-5wO" firstAttribute="trailing" secondItem="mdH-lQ-2xR" secondAttribute="trailing" constant="45" id="gP0-1R-B8w"/>
+                            <constraint firstItem="Lp5-ry-PLL" firstAttribute="top" secondItem="r0O-Uz-dng" secondAttribute="bottom" constant="24" id="cAz-He-pEQ"/>
+                            <constraint firstItem="isU-f5-5wO" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="mdH-lQ-2xR" secondAttribute="bottom" constant="20" id="de2-RQ-EwK"/>
                             <constraint firstItem="isU-f5-5wO" firstAttribute="trailing" secondItem="r0O-Uz-dng" secondAttribute="trailing" constant="45" id="grV-vl-JhH"/>
+                            <constraint firstItem="isU-f5-5wO" firstAttribute="trailing" secondItem="Lp5-ry-PLL" secondAttribute="trailing" constant="45" id="h44-7A-vjO"/>
                             <constraint firstItem="isU-f5-5wO" firstAttribute="trailing" secondItem="ojy-I1-NKC" secondAttribute="trailing" constant="120" id="onT-P6-Xd5"/>
-                            <constraint firstItem="isU-f5-5wO" firstAttribute="trailing" secondItem="BOT-Ho-2kd" secondAttribute="trailing" constant="45" id="qFq-1C-Qmy"/>
                             <constraint firstItem="ojy-I1-NKC" firstAttribute="leading" secondItem="isU-f5-5wO" secondAttribute="leading" constant="119" id="s7K-us-bIr"/>
-                            <constraint firstItem="BOT-Ho-2kd" firstAttribute="top" secondItem="r0O-Uz-dng" secondAttribute="bottom" constant="22" id="yUJ-49-fS2"/>
                             <constraint firstItem="ojy-I1-NKC" firstAttribute="top" secondItem="isU-f5-5wO" secondAttribute="top" constant="81" id="zZG-rL-IcW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="isU-f5-5wO"/>
@@ -122,8 +127,6 @@
                     <navigationItem key="navigationItem" id="ePK-ql-SC4"/>
                     <connections>
                         <outlet property="emailLoginPressed" destination="mdH-lQ-2xR" id="cwv-UN-PI8"/>
-                        <outlet property="facebookLoginPressed" destination="r0O-Uz-dng" id="O4k-V9-QXK"/>
-                        <outlet property="googleLoginPressed" destination="BOT-Ho-2kd" id="hUe-eI-Wqv"/>
                         <segue destination="1BT-5h-lSE" kind="show" identifier="GoToEmailSignIn" id="4He-Ze-Wxn"/>
                         <segue destination="meH-zH-njO" kind="presentation" identifier="GoToHomeScreen" id="CsK-Z0-Qsp"/>
                     </connections>
